Fixes too long urls

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -111,6 +111,7 @@ footer a {
 .rdfa-object  {
     padding: 2px;
     line-height: 1.3;
+    word-wrap: break-word;
 }
 
 .rdfa-object a {
